<resources>
    <string name="app_name">Football</string>
    <string name="comparison">Comparison</string>
    <string name="game">Game</string>
    <string name="guide">Guide</string>
    <string name="match">Match</string>
    <string name="setting">Setting</string>
    <string name="bot">BOT</string>
    <string name="you">You</string>
    <string name="time">Time:</string>
    <string name="_1_minutes">1 minutes</string>
    <string name="_1_5_minutes">1:30 minutes</string>
    <string name="_2_minutes">2 minutes</string>
    <string name="choose_a_team">Choose a team:</string>
    <string name="play">Play</string>
    <string name="timeline">Timeline</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="blur">Blur:</string>
    <string name="sound">Sound:</string>
    <string name="amateur">Amateur</string>
    <string name="pro">PRO</string>
    <string name="legendary">Legendary</string>
    <string name="difficulty">Difficulty</string>
    <string name="text_guide_paragraph_1">In the app you can not only view the schedule of upcoming matches, but even hold them!</string>
    <string name="text_guide_paragraph_2">To do this, you need to select a match, set the settings that are convenient for you and go to the game.</string>
    <string name="text_guide_paragraph_3">In the game you need to score goals to your opponent by moving your game scheme.  The scheme can move up / down and left / right to the borders of the field and kicking the ball.</string>
    <string name="text_guide_paragraph_4">You can score or concede a goal if the ball goes beyond the allocated area - your goal.</string>
    <string name="text_guide_paragraph_5">The first time any of your players touches the ball, the ball slows down a little, on the second touch, if it has not been touched by players of the other team, it speeds up. </string>
    <string name="text_guide_paragraph_6">All played matches will be recorded in your list, where you can then track the result of the actual match.</string>
    <string name="text_guide_paragraph_7">Also, you can practice by simply running the game without selecting a match.</string>
    <string name="your_last_matches">Your last matches</string>
    <string name="play_again">Play again</string>
    <string name="ok">Ok</string>
    <string name="start_score">0-0</string>
    <string name="exit">Exit</string>
    <string name="back_to_game">Back to game</string>
</resources>