<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="111dp"
        android:layout_marginTop="7dp"
        android:background="@color/orange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView18"
            android:layout_width="74dp"
            android:layout_height="74dp"
            android:layout_marginStart="6dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/icon_basket_ball_" />

        <ImageView
            android:id="@+id/imageView19"
            android:layout_width="74dp"
            android:layout_height="74dp"
            android:layout_marginStart="100dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView18"
            app:srcCompat="@drawable/icon_basket_ball_" />

        <ImageView
            android:id="@+id/imageView21"
            android:layout_width="21.32dp"
            android:layout_height="21.32dp"
            android:layout_marginStart="36dp"
            app:layout_constraintBottom_toTopOf="@+id/imageView18"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/icon_small_foot_ball_" />

        <ImageView
            android:id="@+id/imageView24"
            android:layout_width="21.32dp"
            android:layout_height="21.32dp"
            android:layout_marginStart="210dp"
            app:layout_constraintBottom_toTopOf="@+id/imageView19"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/icon_small_foot_ball_" />

        <ImageView
            android:id="@+id/imageView22"
            android:layout_width="33.48dp"
            android:layout_height="33.48dp"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="14dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView18"
            app:srcCompat="@drawable/icon_big_foot_ball_" />

        <ImageView
            android:id="@+id/imageView25"
            android:layout_width="33.48dp"
            android:layout_height="33.48dp"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="14dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView19"
            app:srcCompat="@drawable/icon_big_foot_ball_" />

        <ImageView
            android:id="@+id/imageView23"
            android:layout_width="31.81dp"
            android:layout_height="36.74dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="-2dp"
            app:layout_constraintStart_toEndOf="@+id/imageView18"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/icon_dice_" />

        <ImageView
            android:id="@+id/imageView26"
            android:layout_width="31.81dp"
            android:layout_height="36.74dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="-2dp"
            app:layout_constraintStart_toEndOf="@+id/imageView19"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/icon_dice_" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        app:srcCompat="@drawable/icon_bot" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="55dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView8"
        app:srcCompat="@drawable/icon_you" />

    <TextView
        android:id="@+id/tvBot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/bot"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/imageView8"
        app:layout_constraintStart_toStartOf="@+id/imageView8"
        app:layout_constraintTop_toBottomOf="@+id/imageView8" />

    <TextView
        android:id="@+id/tvBot2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/bot"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/imageView10"
        app:layout_constraintStart_toStartOf="@+id/imageView10"
        app:layout_constraintTop_toBottomOf="@+id/imageView10" />

    <TextView
        android:id="@+id/tvYou"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/you"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/imageView9"
        app:layout_constraintStart_toStartOf="@+id/imageView9"
        app:layout_constraintTop_toBottomOf="@+id/imageView9" />

    <TextView
        android:id="@+id/tvYou2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/you"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/imageView11"
        app:layout_constraintStart_toStartOf="@+id/imageView11"
        app:layout_constraintTop_toBottomOf="@+id/imageView11" />

    <TextView
        android:id="@+id/tvTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="83dp"
        android:text="@string/time"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="34dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTime">


        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="80dp"
            android:layout_height="35dp"
            android:layout_marginRight="7.5dp"
            android:layout_weight="1"
            android:background="@drawable/custom_radio_button"
            android:button="@null"
            android:gravity="center"
            android:text="@string/_1_minutes"
            android:textColor="@color/white" />

        <RadioButton
            android:id="@+id/radioButton7"
            android:layout_width="80dp"
            android:layout_height="35dp"
            android:layout_marginLeft="7.5dp"
            android:layout_marginRight="7.5dp"
            android:layout_weight="1"
            android:background="@drawable/custom_radio_button"
            android:button="@null"
            android:gravity="center"
            android:text="@string/_1_5_minutes"
            android:textColor="@color/white" />


        <RadioButton
            android:id="@+id/radioButton8"
            android:layout_width="80dp"
            android:layout_height="35dp"
            android:layout_marginLeft="7.5dp"
            android:layout_weight="1"
            android:background="@drawable/custom_radio_button"
            android:button="@null"
            android:gravity="center"
            android:text="@string/_2_minutes"
            android:textColor="@color/white" />

    </RadioGroup>

    <TextView
        android:id="@+id/tvChooseTeam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/choose_a_team"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="95dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvChooseTeam"
        app:srcCompat="@drawable/icon_bot" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="95dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvChooseTeam"
        app:srcCompat="@drawable/icon_you" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnPlay"
        android:layout_width="150dp"
        android:layout_height="35dp"
        android:layout_marginBottom="6dp"
        android:background="@drawable/custom_button"
        android:text="@string/play"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnTimeline"
        android:layout_width="150dp"
        android:layout_height="35dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/custom_button"
        android:text="@string/timeline"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/btnPlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>